--- a/Blog/jupytercolab.qmd
+++ b/Blog/jupytercolab.qmd
@@ -26,9 +26,11 @@ A linguagem Julia foi projetada para ser rápida e dinâmica. Agora, quando adic
 
 Neste post, aprenderemos como instalar o Jupyter e adequá-lo ao ambiente da Julia.
 
-## Jupyter pelo Python
+## Instalação do Jupyter
 
-Como vemos no subtítulo acima, devemos instalar o [Python](https://www.python.org/downloads/). Na página direcionada, você poderá instalar a versão mais nova do Python para o seu sistema operacional (no momento da criação deste post é a versão 3.13).
+Para a baixarmos o Jupyter, temos duas alternativas. A primeira é usando o Python em conjunto com o Julia e a segunda é usando somente o Julia (neste caso pule para a seção: Instalação do Jupyter pelo IJulia).
+
+Usando as duas linguagens em questão, devemos primeiro instalar o [Python](https://www.python.org/downloads/). Na página direcionada, você poderá instalar a versão mais nova do Python para o seu sistema operacional (no momento da criação deste post é a versão 3.13).
 
 Com o arquivo instalado, deveremos deixar habilitado “Add python.exe to PATH” (para permitir usar o comando `pip` no prompt de comando).
 
@@ -42,7 +44,16 @@ Tendo o [Julia](https://www.ime.unicamp.br/~juliacps/Blog/instalar_julia.html) e
 
 ![Terminal Julia](imagens/gvc_jupyter_imagem3.png){fig-align="center"}
 
-Agora, finalmente, abrindo o cmd digitamos: `jupyter notebook`. Com o Jupyter aberto, para abrir um notebook, vamos para a barra *New* e selecionamos o *Julia (a versão que você instalou)*. E voilá.
+Agora, finalmente, abrindo o cmd e digitamos: `jupyter notebook`. Com o Jupyter aberto, para abrir um notebook, vamos para a barra *New* e selecionamos o *Julia (o número da versão que você instalou)*. E voilá.
+
+## Instalação do Jupyter pelo IJulia
+
+Caso você não queira instalar o Python podemos fazer tudo pelo Julia! Terminando de instalar o IJulia, no terminal, digite `using IJulia` e em seguida `notebook()`.
+Será perguntado se você deseja instalar o Jupyter via Conda, digite `y`.
+
+![Instalando Jupyter (Julia)](imagens/gvc_jupyter_imagem5.png){fig-align="center"}
+
+Após esperar o tempo de instalação, temos o Jupyter em mãos!
 
 ## Julia no Colab
 
