--- a/Blog/HistoriaJulia.qmd
+++ b/Blog/HistoriaJulia.qmd
@@ -1,13 +1,17 @@
 ---
 title: "Do Zero ao Julia: Entenda a História da Linguagem que Une Simplicidade e Desempenho"
 description: |
-  Conheça a história do Julia que surgiu com a proposta de unir o desempenho e a simplicidade em uma só linguagem.
+  Conheça a história do Julia, que surgiu com a proposta de unir o desempenho e a simplicidade em uma só linguagem.
 categories:
-  - Quarto
+  - História
 author:
   - name: Esther Cleveston
     affiliation: "Universidade Estadual de Campinas"
     orcid: 0009-0008-6612-8417
+  - name: Pedro H. G. Elias
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/phgelias
+    orcid: 0009-0003-8992-9827
 date: "2025-05-09"
 image: imagens/HistoriaJulia.png
 lang: pt
@@ -21,31 +25,29 @@ draft: false
 
 ## Início de tudo
 
-
 ::: {.justify}
 Durante muito tempo, programadores sofreram com o problema das duas linguagens, no qual as ideias eram testadas em linguagens mais simples, como R, Python e MATLAB e, à medida que exigiam maior desempenho, precisavam ser reescritas em linguagens mais rápidas, como Fortran ou C.
-Todo esse trabalho era muito propenso a erros e falhas no código final. Em razão disso, surgiu o Julia: uma proposta para unir rapidez e simplicidade em uma só linguagem de programação.
-:::
 
+Todo esse trabalho era muito propenso a erros e falhas no código final. Em razão disso, surgiu a linguagem Julia: uma proposta para unir rapidez e simplicidade em uma só linguagem de programação.
+:::
 
 ## O Desenvolvimento
 Em 2009, quatro pesquisadores do MIT (Massachusetts Institute of Technology) começaram a desenvolver uma solução para o problema das duas linguagens. Stefan Karpinski, Alan Edelman, Jeff Bezanson e Viral B. Shah tinham o objetivo de criar uma linguagem de programação moderna, extremamente rápida e, ao mesmo tempo, fácil de escrever.
-Ao longo de cerca de quatro anos, a linguagem foi mantida em sigilo, até que, em fevereiro de 2012, ela veio a público por meio do artigo “Why We Created Julia”, o qual apresentou ao mundo a primeira versão da linguagem, que já contava com documentação, pacotes básicos e um compilador funcional.
-Logo após seu lançamento, a linguagem ganhou bastante popularidade no meio científico e ampla divulgação em fóruns e comunidades. Entretanto, o marco da maturidade da linguagem aconteceu em 2018, com o lançamento da versão 1.0, que trouxe diversas inovações técnicas, como maior confiabilidade para uso em produção, estabilidade da API e consolidação do ecossistema.
 
+Ao longo de cerca de quatro anos, o projeto foi mantido em sigilo, até que, em fevereiro de 2012, veio a público por meio do artigo “Why We Created Julia”, o qual apresentou ao mundo a primeira versão da linguagem, que já contava com documentação, pacotes básicos e um compilador funcional.
 
-
-
+Logo após seu lançamento, Julia ganhou bastante popularidade no meio científico e ampla divulgação em fóruns e comunidades. Entretanto, o marco da maturidade da ferramenta aconteceu em 2018, com o lançamento da versão 1.0, que trouxe diversas inovações técnicas, como maior confiabilidade para uso em produção, estabilidade da API e consolidação do ecossistema.
 
 ## Julia atualmente
 
-
 ::: {.justify}
-Atualmente, a linguagem de programação Julia é utilizada em todo o mundo por cientistas, engenheiros e desenvolvedores que trabalham com dados. Em 2020, Julia ocupava a 47ª posição no índice TIOBE (um termômetro das linguagens mais populares) e, em 2022, já estava na 21ª posição. Isso demonstra que o alcance do Julia está crescendo constantemente ao longo do tempo.
-A linguagem surgiu como solução para um problema comum e foi além, tornando-se uma ponte entre o mundo das linguagens mais simples e o das mais rápidas. Seu impacto já é visível em diversas áreas da ciência e do mercado de trabalho, e seu futuro é cada vez mais promissor para quem lida com tecnologia.
-:::
+Atualmente, Julia é utilizado em todo o mundo por cientistas, engenheiros e desenvolvedores que trabalham com dados. Em 2020, ocupava a 47ª posição no índice TIOBE (um termômetro das linguagens mais populares) e, em 2022, já estava na 21ª posição. Isso demonstra que o alcance dessa tecnologia está crescendo constantemente ao longo do tempo.
 
+Julia surgiu como solução para um problema comum e foi além, tornando-se uma ponte entre o mundo das linguagens mais simples e o das mais rápidas. Seu impacto já é visível em diversas áreas da ciência e do mercado de trabalho, e seu futuro é cada vez mais promissor para quem lida com tecnologia.
+:::
 
 ::: {.callout-note} 
 Ferramentas de IA foram utilizadas para correção ortográfica e aprimoramento do texto.
 :::
+
+## Referências
