--- a/Equipe/Atual/esther_cleveston.qmd
+++ b/Equipe/Atual/esther_cleveston.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Esther Cleveston"
 sortby: "Esther Cleveston"
-subtitle: "Graduando em Estatística"
+subtitle: "Graduanda em Estatística"
 image: Esther_Cleveston.png
 about:
   id: person-profile
