--- a/Equipe/Atual/sarah_silva.qmd
+++ b/Equipe/Atual/sarah_silva.qmd
@@ -1,20 +1,21 @@
 ---
-  title: "sarah_silva"
-sortby: "Sarah Pereira Teixeira Silva"
+title: "Sarah Silva"
+sortby: "Sarah Silva"
 subtitle: "Graduanda em Matemática Aplicada e Computacional"
 image: sarah_silva.jpeg
 about:
   id: person-profile
-template: solana
-image-width: 10em
-links:
-  - icon: github
-text: Github
-href: https://github.com/astrogenun
-- icon: linkedin
-text: Linkedin
-href: https://www.linkedin.com/in/sarah-pereira-b938b520a/
-  ---
+  template: jolla
+  image-width: 10em
+  image-shape: rectangle
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/astrogenun
+    - icon: linkedin
+      text: Linkedin
+      href: https://www.linkedin.com/in/sarah-pereira-b938b520a/
+---
   
   
   
