--- a/Tutoriais/graf_basico.qmd
+++ b/Tutoriais/graf_basico.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Gráficos em Julia: primeiros passos"
 description: |
-  Tão importante quanto desenvolver, implementar e aplicar modelos/metodologías é saber comunicar os resultados de forma clara e acessível para o público-alvo. E que melhor forma de fazer isso do que com visualizações didáticas e informativas?. Neste tutorial, você aprenderá a criar gráficos básicos em `Julia` com o pacote `Plots.jl` e outras bibliotecas auxiliares.
+  Tão importante quanto desenvolver, implementar e aplicar modelos/metodologías é saber comunicar os resultados de forma clara e acessível para o público-alvo. E que melhor forma de fazer isso do que com visualizações didáticas e informativas? Neste tutorial, você aprenderá a criar gráficos básicos em `Julia` com o pacote `Plots.jl` e outras bibliotecas auxiliares.
 categories:
   - Gráficos
 author:
@@ -135,7 +135,7 @@ scatter(x, y, title = "Gráfico de Dispersão", xlabel = "x", ylabel = "log(x)",
 :::
 
 
-> **Observação:** o operador $\cdot$ (_dot_), aplica a função $\log()$ a cada elemento do vetor `x`. O ";" evita que a variável `y` seja imprimida (como aconteceu com a variávél `x`).
+> **Observação:** o operador $\cdot$ (_dot_), aplica a função $\log()$ a cada elemento do vetor `x`. O ";" evita que a variável `y` seja impressa (como aconteceu com a variável `x`).
 
 
 ### Histograma
