--- a/Tutoriais/graf_basico.qmd
+++ b/Tutoriais/graf_basico.qmd
@@ -45,9 +45,8 @@ Pkg.add("Plots")
 using Plots
 ```
 
-::: tip
-Lembre-se que precisamos apenas instalar o pacote uma única vez, mas chamá-lo em cada sessão que formos utilizá-lo.
-:::
+
+> Lembre-se que precisamos apenas instalar o pacote uma única vez, mas chamá-lo em cada sessão que formos utilizá-lo.
 
 
 
@@ -85,7 +84,7 @@ Um dos gráficos mais básicos (e úteis) para visualização de dados é o grá
 
 <center>
 ```{julia}
-plot(Normal(0,1), title = "Distribuição Normal")
+plot(Normal(0,1), title = "Distribuição Normal", size = (800, 500))
 ```
 </center>
 
@@ -112,7 +111,7 @@ A função `plot()` também pode ser utilizada para criar gráficos de linha ou 
 
 <center>
 ```{julia}
-plot(randn(10), title = "Gráfico de linha ou de sequência")
+plot(randn(10), title = "Gráfico de linha ou de sequência", size = (800, 500))
 ```
 </center>
 
@@ -126,13 +125,13 @@ Também é possível fazer um gráfico de dispersão (_scatterplot_) com o códi
 :::
 
 
-::: center
+<center>
 ```{julia}
 x = 0:0.5:10
 y = log.(x);
 scatter(x, y, title = "Gráfico de Dispersão", xlabel = "x", ylabel = "log(x)", legend = false)
 ```
-:::
+</center>
 
 
 > **Observação:** o operador $\cdot$ (_dot_), aplica a função $\log()$ a cada elemento do vetor `x`. O ";" evita que a variável `y` seja imprimida (como aconteceu com a variávél `x`).
@@ -143,23 +142,23 @@ scatter(x, y, title = "Gráfico de Dispersão", xlabel = "x", ylabel = "log(x)",
 ::: {.justify}
 Outro recurso valioso na visualização de dados é o histograma,  ideal para visualizar a distribuição de uma variável. Vamos construí-lo a partir da criação de uma variável x equivalente a 1000 números aleatórios de uma distribuição Normal(0, 1), executando o seguinte bloco:
 
-::: center
+<center>
 ```{julia}
 x = randn(1000);
 histogram(x, title = "Histograma", color = :purple)
 ```
-:::
+</center>
 
 
 Note que é possível customizar o número de intervalos (`bins = 100`, por exemplo) do seu histograma e modificar sua cor base. No exemplo abaixo, a cor é definida por nome (:purple), mas você também pode usar códigos hexadecimais — por exemplo, `color = "#800080"` produz o mesmo tom de roxo.
 :::
 
 
-::: center
+<center>
 ```{julia}
 histogram(x, title = "Histograma", bins = 10, color = "#111080")
 ```
-:::
+</center>
 
 
 ### Boxplot
@@ -169,13 +168,13 @@ Para os estatísticos e cientistas de dados, o pacote `Plots.jl` oferece suporte
 :::
 
 
-::: center
+<center>
 ```{julia}
 y = 5 * rand(50, 2);
 size(y)
 boxplot(y, title = "Boxplot", color = [:darkorchid :darkorange])
 ```
-:::
+</center>
 
 
 ::: {.justify}
@@ -193,14 +192,14 @@ Vamos supor que os institutos IMECC, IG, IFGW e IFCH tenham, respectivamente, 70
 :::
 
 
-::: center
+<center>
 ```{julia}
 z = ["IMECC", "IG", "IFGW", "IFCH"]
 alunos = [700, 600, 500, 470];
 w = 100 .* alunos ./ sum(alunos)
 pie(z, w, title = "Quantidade de alunos por instituto", palette = :tab10)
 ```
-:::
+</center>
 
 Para escolher manualmente as cores de cada fatia do gráfico de pizza, você pode usar uma lista de cores assim como no boxplot. Mas cuidado! Aqui os dados não foram gerados em conjunto, mas sim em dois vetores separados. Assim, para substituir o argumento `palette`, a vígula entre os nomes é necessária.
 
@@ -215,13 +214,13 @@ color = [:darkorchid, :darkorange, :purple, :blue]
 
 Para comparar valores entre diferentes grupos e categorias, podemos construir um gráfico de barras de estrutura semelhante ao seguinte:  
 
-::: center
+<center>
 ```{julia}
 num = ["A", "B", "C", "D", "E"]
 qnt = [100; 70; 100; 80; 60]
 bar(num, qnt, color = :seagreen)
 ```
-:::
+</center>
 
 
 ## Grids e Combinações 
@@ -231,28 +230,28 @@ Uma ferramenta bastante utilizada na visualização de dados é a junção de gr
 :::
 
 
-::: center
+<center>
 ```{julia}
 h = range(0, 10, length = 100)
 k = @. log(h)
 j = @. exp(h)
 plot(h, [k j], layout = (2, 1), legend = false, color = :green)
 ```
-:::
+</center>
 
 
 ::: {.justify}
 Na figura acima criamos um vetor `h` com 100 valores uniformemente espaçados entre 0 e 10, um vetor `k` correspondente ao logaritmo dos elementos de `h`, e `j` ao exponencial dos mesmos elementos. O argumento `layout` define a disposição dos gráficos na figura, no qual o primeiro número indica o número de linhas e o segundo o número de colunas do grid. Agora, vamos combinar essas mesmas informações em um único gráfico, ajustando `j` para que sua escala fique mais próxima à de `k`.
 :::
 
-::: center
+<center>
 ```{julia}
 j2 = @. exp(h)/5000
 
 plot(h, k, label = "log", color = :green)
 plot!(h, j2, label = "exp/5000", color = :steelblue, ls = :dash)
 ```
-:::
+</center>
 
 
 > Note que além de ocultar ou exibir a legenda, é possível personalizar os rótulos (`labels`) do seu gráfico e escolher diferentes estilos para as linhas das curvas.
@@ -270,6 +269,7 @@ Caso nenhuma das customizações mostradas até agora seja suficiente para ilust
 ::: {.justify}
 Para explorar as cores nomeadas disponíveis na base do Julia e seus códigos RGB (uma tripla que representa a composição de vermelho, verde e azul), você pode acessar a lista oficial clicando em [cores](https://juliagraphics.github.io/Colors.jl/latest/namedcolors/). Se você quiser diversificar as opções de paletas disponíveis, o pacote `ColorSchemes` pode ser adicionado à sua biblioteca:
 :::
+
 
 ```{julia, eval = FALSE}
 Pkg.add("ColorSchemes")
